# rustman

./: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  DialogDemo.tsx  Section.tsx  Side.tsx  index.css  main.tsx  state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-yew/: Cargo.toml  Trunk.toml  index.css  index.html
src-yew/src/: app.rs  main.rs  openapi.rs  state.rs  tauri_api.rs  utils.rs
src-yew/src/components/: json_highlight.rs  mod.rs  section.rs  side.rs  tools.rs
src-yew/src/components/request/: body.rs  content.rs  header_table.rs  mod.rs  param_table.rs  path_table.rs  title.rs  url.rs
src-yew/src/components/response/: content.rs
src-yew/src/components/tree/: directory.rs
src/components/Request/: Body.tsx  Content.tsx  HeaderRow.tsx  HeaderTable.tsx  ParamRow.tsx  ParamTable.tsx  Root.tsx  Title.tsx  Url.tsx  index.tsx
src/components/Response/: Content.tsx  Root.tsx  index.tsx
src/components/Tabs/: Content.tsx  List.tsx  Root.tsx  Trigger.tsx  index.tsx
src/components/Tree/: Branch.tsx  Directory.tsx  Request.tsx  Root.tsx  Server.tsx  index.tsx
src/context/: TabContext.tsx  TreeContext.tsx
