[package]
name = "rustman-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-wasm-bindgen = "0.6"
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
url = "2"
http = "0.2"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"
sha2 = "0.10"
md5 = "0.7"
aes-gcm = "0.10"
rsa = { version = "0.9", default-features = false, features = ["pem", "sha2", "std"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "DomRect",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "SubmitEvent",
  "TextDecoder",
  "TextEncoder",
  "Window"
] }
